final bug fixes

--- a/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
@@ -215,7 +215,7 @@
                                             {
                                                 sDisabled = "disabled";
                                             }
-                                                    <button type="button" class="btn btn-primary @sDisabled" id="btnSubmit">
+                                                    <button type="button" class="btn btn-info-gradient @sDisabled" id="btnSubmit">
                                                         <i class="fa fa-check-circle"></i>&nbsp;Save Disposal
                                                     </button>
                                         }
