--- a/MODAMSWeb/Areas/Users/Views/Transfers/CreateTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/CreateTransfer.cshtml
@@ -178,11 +178,11 @@
                                         @{
                                             if (Model.Assets == null)
                                             {
-                                                        <button type="button" class="btn btn-primary disabled" id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
+                                                        <button type="button" class="btn btn-info disabled" id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
                                             }
                                             else
                                             {
-                                                        <button type="button" class="btn btn-primary" id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
+                                                        <button type="button" class="btn btn-info" id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
                                             }
                                         }
 
