--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
@@ -58,8 +58,8 @@
                 <!-- ROW -->
                 <div class="row">
                     <div class="col-xl-9 col-lg-12">
-                        <div class="card ">
-                            <div class="card-header border-bottom d-block divShadow bg-primary-gradient text-white">
+                        <div class="card">
+                            <div class="card-header border-bottom d-block divShadow bg-info-gradient text-white">
                                 <div class="row align-items-center">
                                     <div class="col">
                                         <h4 class="mb-1">
@@ -74,7 +74,7 @@
                                                 }
                                                 if (User.IsInRole("Administrator"))
                                                 {
-                                                    <a asp-action="DeleteAsset" asp-controller = "Assets" asp-route-id="@Model.Asset.Id" class="float-end btn btn-danger-gradient">
+                                                    <a asp-action="DeleteAsset" asp-controller = "Assets" asp-route-id="@Model.Asset.Id" class="float-end btn btn-secondary-gradient">
                                                         <i class="fa fa-trash"></i>&nbsp;Delete Asset
                                                     </a>
                                                 }
