--- a/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
@@ -27,7 +27,7 @@
 <div class="row">
     <div class="col-lg-12 col-md-12">
         <div class="card">
-            <div class="card-header border-bottom bg-primary-gradient divShadow">
+            <div class="card-header border-bottom bg-info-gradient divShadow">
                 <h4 class="mb-0 text-white">Asset Details</h4>
             </div>
             <div class="card-body p-0">
@@ -225,7 +225,7 @@
                 </div>
                 <div class="row p-5">
                     <div class="btn-list">
-                        <button id="btnSubmit" class="btn btn-primary">Save Changes</button>
+                        <button id="btnSubmit" class="btn btn-info">Save Changes</button>
                         <a asp-action="Index" asp-controller="Assets" asp-route-id="@TempData["storeId"]"
                            id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
                     </div>
