--- a/MODAMSWeb/Areas/Users/Views/Reporting/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Reporting/Index.cshtml
@@ -44,7 +44,7 @@
                             <div class="row">
                                 <div class="col">
                                     <hr class="customHR w-100" />
-                                    <form method="post" asp-action="ReportViewer" id="frmAssetReport">
+                                    <form method="post" target="_blank" asp-action="ReportViewer" id="frmAssetReport">
                                         <input type="hidden" name="ReportId" id="ReportId" value="AssetReport" />
                                         <div class="form-group">
                                             <select asp-for="AssetStoreId" asp-items="@Model.AssetStores"
@@ -104,7 +104,7 @@
                             <div class="row">
                                 <div class="col">
                                     <hr class="customHR w-100" />
-                                    <form method="post" asp-action="ReportViewer" id="frmTransferReport">
+                                    <form method="post" target="_blank" asp-action="ReportViewer" id="frmTransferReport">
                                         <input type="hidden" name="ReportId" id="ReportId" value="TransferReport" />
                                         <div class="form-group">
                                             <label asp-for="StoreFromId"></label>
@@ -155,6 +155,27 @@
                             </div>
                             <div class="row">
                                 <div class="col">
+                                    <hr class="customHR w-100" />
+                                    <form method="post" target="_blank" asp-action="ReportViewer" id="frmDisposalReport">
+                                        <input type="hidden" name="ReportId" id="ReportId" value="DisposalReport" />
+                                        <div class="form-group">
+                                            <label asp-for="DisposalStoreId"></label>
+                                            <select asp-for="DisposalStoreId" asp-items="@Model.AssetStores"
+                                                    class="form-control select2 form-select">
+                                                <option value="0">All Stores</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label asp-for="DisposalTypeId"></label>
+                                            <select asp-for="DisposalTypeId" asp-items="@Model.DisposalTypes"
+                                                    class="form-control select2 form-select">
+                                                <option value="0">All Disposl Types</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group flex text-center">
+                                            <button class="btn btn-info" id="btnSubmitDisposalReport"><i class="fa fa-print"></i>&nbsp;Generate Report</button>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -192,15 +213,7 @@
         <script>
             $(document).ready(() => {
                 $('.select2').select2();
-                $('#btnSubmitAssetReport').on("click", (e) => {
-                    e.preventDefault();
-                    var form = document.getElementById('frmAssetReport');
-                    form.target = '_blank';
-                    form.action = 'ReportViewer';
-                    form.submit();
-                    //$('#frmAssetReport').submit();
-                });
-
+                
                 resizeCards();
             });
 
