--- a/MODAMSWeb/Views/Shared/_Notification.cshtml
+++ b/MODAMSWeb/Views/Shared/_Notification.cshtml
@@ -13,7 +13,7 @@
             position: "center",
             width: 500,
             height: 60,
-            autohide: false
+            autohide: true
         });
         </script>
     }
@@ -26,7 +26,7 @@
             position: "center",
             width: 500,
             height: 60,
-            autohide: false
+            autohide: true
         });
         @*notif({
             msg: "@TempData["error"]",
