Reporting bugs fixed

--- a/MODAMSWeb/Areas/Users/Views/Reporting/ReportViewer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Reporting/ReportViewer.cshtml
@@ -31,6 +31,12 @@
             overflow: hidden;
             font-family: Verdana, Arial;
         }
+
+        signatureStyle{
+            font-family:'Freestyle Script';
+            font-size:20px;
+        }
+
     </style>
 </head>
 <body>
