design enhancement and bug fixes

--- a/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
@@ -246,7 +246,7 @@
     <script>
         $(document).ready(() => {
             loadFaces();
-
+            hideMenu();
             $('#btnSaveChanges').on("click", () => {
                 let employeeId = $('#EmployeeId').val();
                 if (employeeId != null) {
