--- a/MODAMSWeb/Views/Shared/layouts/_app-sidebar.cshtml
+++ b/MODAMSWeb/Views/Shared/layouts/_app-sidebar.cshtml
@@ -134,6 +134,11 @@
                             <span class="side-menu__label">Settings</span>
                         </a>
                     </li>
+                    @* <li class="nav-item pt-6">
+                        <a class="nav-link" href="#">
+                            <img src="/assets/images/brand/EU_Horizontal2.png" alt="Logo" style="height: 30px; width: auto;" />
+                        </a>
+                    </li> *@
                 }
 
             </ul>
