--- a/MODAMSWeb/Areas/Admin/Views/Employees/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/Index.cshtml
@@ -34,7 +34,7 @@
     </div>
     <div class="col-md-12 mb-3">
         <div class="btn-list">
-            <a asp-area="Admin" asp-controller="Employees" asp-action="CreateEmployee" class="btn btn-primary trShadow">
+            <a asp-area="Admin" asp-controller="Employees" asp-action="CreateEmployee" class="btn btn-info-gradient trShadow">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
                 New Employee
             </a>
@@ -49,7 +49,6 @@
                             <tr>
                                 <th class="bg-transparent border-bottom-0 w-5">S.No</th>
                                 <th class="bg-transparent border-bottom-0">Full Name</th>
-                                <th class="bg-transparent border-bottom-0">Card Number</th>
                                 <th class="bg-transparent border-bottom-0">Job Title</th>
                                 <th class="bg-transparent border-bottom-0">Phone</th>
                                 <th class="bg-transparent border-bottom-0">Role Name</th>
@@ -83,7 +82,6 @@
                                                 </div>
                                             </div>
                                         </td>
-                                        <td class="text-muted fs-15 fw-semibold">@employee.CardNumber</td>
                                         <td class="text-muted fs-15 fw-semibold">@employee.JobTitle</td>
                                         <td class="text-muted fs-15 fw-semibold">@employee.Phone</td>
                                         <td class="text-muted fs-15 fw-semibold">@employee.RoleName</td>
